# triangles_intersection

./: .gitignore  CMakeLists.txt  README.md  addition.cpp  addition.h  input.txt  line.cpp  line.h  main  main.cpp  point.cpp  point.h  polygon.cpp  polygon.h  triangle.cpp  triangle.h  triangle_intersect.cpp  triangle_intersect.h  vector.cpp  vector.h
